After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621831 - Incorrectly detects an extra CPU
Incorrectly detects an extra CPU
Status: RESOLVED FIXED
Product: libgtop
Classification: Core
Component: linux
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: libgtop maintainers
libgtop maintainers
Depends on:
Blocks:
 
 
Reported: 2010-06-16 22:03 UTC by Josselin Mouette
Modified: 2013-12-09 02:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Josselin Mouette 2010-06-16 22:03:46 UTC
Original report: http://bugs.debian.org/585742 by Hanspeter Spalinger

On some PowerPC systems the /proc/cpuinfo contents is not conformant to what libgtop expects:

bart:/home/spahan# more /proc/cpuinfo
processor       : 0
cpu             : PPC970MP, altivec supported
clock           : 1250.000000MHz
revision        : 1.1 (pvr 0044 0101)

processor       : 1
cpu             : PPC970MP, altivec supported
clock           : 1250.000000MHz
revision        : 1.1 (pvr 0044 0101)

processor       : 2
cpu             : PPC970MP, altivec supported
clock           : 1250.000000MHz
revision        : 1.1 (pvr 0044 0101)

processor       : 3
cpu             : PPC970MP, altivec supported
clock           : 1250.000000MHz
revision        : 1.1 (pvr 0044 0101)

timebase        : 33333333
platform        : PowerMac
model           : PowerMac11,2
machine         : PowerMac11,2
motherboard     : PowerMac11,2 MacRISC4 Power Macintosh
detected as     : 337 (PowerMac G5 Dual Core)
pmac flags      : 00000000
L2 cache        : 1024K unified
pmac-generation : NewWorld


The Linux sysinfo code expects records to be split by \n\n, while there is another condition now: that they start by “processor”.
Comment 1 Robert Roth 2013-12-09 02:12:54 UTC
The problem seems to only appear with PPC processors supporting SMP, but still deserving a fix. I have pushed revision 47bcd423b5e58210d0283b09951ea3a68f54bb7e [1], see the commit for more details about the fix.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.

[1] https://git.gnome.org/browse/libgtop/commit/sysdeps/linux?id=47bcd423b5e58210d0283b09951ea3a68f54bb7e